[package]
name = "nexcore-firebase"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license = "LicenseRef-NexVigilant-Proprietary"
description = "Firebase Auth, Firestore, and Stripe REST API clients for NexVigilant backend"

[features]
default = ["client"]
client = ["dep:reqwest"]

[dependencies]
nexcore-error = { workspace = true }
nexcore-lex-primitiva = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, optional = true }

[lints]
workspace = true
